# simple-compilers

./: README.md
j-compiler/: README.md  c4c  c4i  fact.sc  lex.cal.c  lex.yy.c  readme  sas  sas.tab.c  sas.tab.h  y.tab.c  y.tab.h
j-compiler/c4/: c4c.c
j-compiler/c5/: .gitignore  c5.l  c5.y  c5c.c  c5i  c5i.c  calc3.h  lex.yy.c  makefile  nas  nas.l  nas.tab.c  readme.md  run_tests.sh  y.tab.c  y.tab.h
j-compiler/nas/: makefile  nas.c  nas.tab.h  rev-c.as
j-compiler/sas/: makefile  sas.y
javascript-interpreter/stage0/: LICENSE  tutorial4.cabal
javascript-interpreter/stage1/: demo.txt  demo2.txt  tutorial5.cabal
javascript-interpreter/stage1/app/: Main.hs
javascript-interpreter/stage1/src/: Declare.hs  Interp.hs  Parser.hs  Tokens.hs  TypeCheck.hs
javascript-interpreter/stage2/: demo.txt  stack.yaml  tutorial6.cabal
javascript-interpreter/stage3/: demo.txt  stack.yaml  tutorial7.cabal
jcc/: README.md
jcc/c4/: .gitignore  makefile  readme
jcc/c5/: .gitignore  readme.md  run_sample_progs.sh  run_tests.sh  strmap.c
jcc/c6/: .gitignore  c6.l  c6.y  c6c.c  calc3.h  makefile  nas.l  nas.y  readme.md  run_sample_progs.sh  run_tests.sh
misc/: div5.l  e.l  e1.y  gen5.c  wc0.l  wc1.l
misc/LexAndYaccCode/: build  clean
misc/c4/: c4.l  sas.c  sas.l
misc/island_count/: ic.l  ocean.txt  ocean_20_40.txt  ocean_bonus.txt
misc/lrcal/: lrcal.l  lrcal.y  readme
misc/nas/: fact.as  test.as
misc/recursive_descent_cal/: grammar  rdcal.c  rdcal.l
misc/sdt/: sdt.l  (+3 more)
music_translator/: build.sh  readme.md  trans.l  trans.y
simple_calculator/: cal.l  cal.y
tdp-compiler/: build.sh  demo.tdp  lex.yy.c  readme.md  tdp  tdp.l  tdp.y  y.tab.c  y.tab.h
toy_compiler/: build  calc3.y  calc3g.c
(+143 files in other folders)
