name:                tutorial5
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/bixuanzju/tutorial5#readme
license:             BSD3
license-file:        LICENSE
author:              Jeremy Bi
maintainer:          bixuanxbi@gmail.com
copyright:           2016 Jeremy Bi, The University of Hong Kong
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Declare
                       Tokens
                       Parser
                       Interp
                       TypeCheck
  build-depends:       base >= 4.7 && < 5
                     , array
  default-language:    Haskell2010
  build-tools:         alex == 3.1.*,
                       happy == 1.19.*

executable sinh
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tutorial5
  default-language:    Haskell2010

test-suite tutorial5-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             doctest-driver.hs
  build-depends:       base
                     , tutorial5
                     , doctest
                     , doctest-discover
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bixuanzju/tutorial5
